Added tests for XmlBookManager.

--- a/SimpleBookManager.Tests/SimpleBookManager.Tests.csproj
+++ b/SimpleBookManager.Tests/SimpleBookManager.Tests.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\SimpleBookManager.Core\SimpleBookManager.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="BooksTestLib.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
